# spec-kitty-orchestrator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
.kittify/: AGENTS.md  config.yaml  metadata.yaml
.kittify/missions/software-dev/: mission.yaml
docs/: orchestration-reliability.md
src/spec_kitty_orchestrator/: __init__.py  config.py  executor.py  loop.py  monitor.py  policy.py  power.py  run_lock.py  scheduler.py  state.py
src/spec_kitty_orchestrator/agents/: __init__.py  augment.py  base.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  kilocode.py  opencode.py  qwen.py
src/spec_kitty_orchestrator/cli/: __init__.py  main.py
src/spec_kitty_orchestrator/host/: __init__.py  client.py  models.py
tests/: test_agent_invokers.py  test_agent_selection.py  test_cli_main.py  test_cli_wiring.py  test_config.py  test_executor.py  test_host_client.py  test_loop.py  test_monitor.py  test_power.py  test_qwen_invoker.py  test_resume_orphaned.py  test_review_recovery.py  test_run_lock.py  test_runtime_compat.py  test_subtask_tracking.py
tests/conformance/: test_contract.py
tests/conformance/fixtures/: accept_feature_success.json  accept_mission_success.json  append_history_success.json  contract_version_success.json  error_contract_mismatch.json  error_feature_not_found.json  error_mission_not_found.json  error_policy_required.json  error_transition_rejected.json  feature_state_success.json  list_ready_success.json  merge_feature_success.json  merge_mission_success.json  (+5 more)
tests/e2e/: harness.py  test_contract_smoke.py
(+8 files in other folders)
